#-------------------------------------------------------------------------------
# $Id: Makefile,v 1.46 2010/08/26 17:44:16 draeger1 Exp $
#------------------------------------------------------------------------------
#
# Get name of architecture-specific include file from hostname

bin_PROGRAMS  = qball

qball_SOURCES = AtomSet.C Atom.C SymmetrySet.C Symmetry.C Species.C Wavefunction.C SlaterDet.C \
      EnergyFunctional.C SampleStepper.C Basis.C FourierTransform.C Matrix.C Context.C \
      sinft.C Spline.C UnitCell.C StructureFactor.C ChargeDensity.C UserInterface.C RunCmd.C \
      LoadCmd.C SaveCmd.C SavesysCmd.C SavedenCmd.C SpeciesCmd.C SpeciesReader.C \
      SpeciesHandler.C XCPotential.C LDAFunctional.C PBEFunctional.C PBESolFunctional.C \
      PBERevFunctional.C BLYPFunctional.C NonLocalPotential.C SampleReader.C SampleWriter.C \
      StructuredDocumentHandler.C SampleHandler.C AtomSetHandler.C WavefunctionHandler.C \
      XMLGFPreprocessor.C Base64Transcoder.C CPSampleStepper.C BOSampleStepper.C ParOptCmd.C \
      ParallelOptimizer.C WavefunctionStepper.C SDWavefunctionStepper.C \
      MDWavefunctionStepper.C SDIonicStepper.C MDIonicStepper.C BMDIonicStepper.C \
      PSDWavefunctionStepper.C PSDAWavefunctionStepper.C JDWavefunctionStepper.C \
      SDCellStepper.C ConfinementPotential.C Preconditioner.C SimpleConvergenceDetector.C \
      MMSpecies.C EmpiricalPotential.C EnthalpyFunctional.C Hugoniostat.C release.C qbox_xmlns.C \
      isodate.C ComputeMLWFCmd.C BasisMapping.C MLWFTransform.C jade.C ConstraintSet.C \
      Constraint.C DistanceConstraint.C PositionConstraint.C AngleConstraint.C TorsionConstraint.C \
      SaveESPCmd.C AndersonMixer.C SDAIonicStepper.C CGIonicStepper.C jacobi.C HubbardPotential.C \
      SphericalIntegration.C PrintMem.C PlotCmd.C SOTDWavefunctionStepper.C \
      SORKTDWavefunctionStepper.C FORKTDWavefunctionStepper.C TDEULERWavefunctionStepper.C \
      EhrenSampleStepper.C MDSaveCmd.C FCPStepper.C ExponentialWavefunctionStepper.C SelfConsistentPotential.C

